crates/carta/tests/snapshots/golden_writer__beamer__common__blockquote.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\begin{quote}
quoted

more lines here
\end{quote}
\end{frame}
