crates/carta/tests/snapshots/golden_writer__beamer__common__bullet-nested.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\begin{itemize}
\item
  outer

  \begin{itemize}
  \tightlist
  \item
    inner one
  \item
    inner two
  \end{itemize}
\end{itemize}
\end{frame}
