crates/carta/tests/snapshots/golden_writer__beamer__common__citation.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
see {[}@knuth1984{]} for details
\end{frame}
