crates/carta/tests/snapshots/golden_writer__beamer__common__code-block-id.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}[fragile]
\protect\phantomsection\label{snippet}%
\begin{verbatim}
plain code
\end{verbatim}
\end{frame}
