crates/carta/tests/snapshots/golden_writer__beamer__common__code-block-indented.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}[fragile]
\begin{verbatim}
indented code
second line
\end{verbatim}
\end{frame}
