crates/carta/tests/snapshots/golden_writer__beamer__common__code-block-numbered.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}[fragile]
\begin{verbatim}
print(1)
print(2)
\end{verbatim}
\end{frame}
