crates/carta/tests/snapshots/golden_writer__beamer__common__code-span-space-padded.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}[fragile]
\texttt{\ x\ }

\texttt{\ }

\texttt{\textasciigrave{}x}
\end{frame}
